# research_project_backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
benchmark_results/: bugsinpy_smoke__cases.csv  bugsinpy_smoke__summary.json  p4_bip_consensus__cases.csv  p4_bip_consensus__summary.json  p4_bip_single__cases.csv  p4_bip_single__summary.json  p4_ec_byzantine_reject__cases.csv  p4_ec_byzantine_reject__summary.json  p4_ec_consensus__cases.csv  p4_ec_consensus__summary.json  p4_ec_single__cases.csv  p4_ec_single__summary.json  p4_synth_consensus__cases.csv  p4_synth_consensus__summary.json  p4_synth_single__cases.csv  p4_synth_single__summary.json  phase4_ablation__report.json  phase4_ablation__report.txt  phase4_ablation_v2__report.json  phase4_ablation_v2__report.txt  phase4_smoke__cases.csv  phase4_smoke__summary.json  synthetic__20260505T074825__cases.csv  synthetic__20260505T074825__summary.json  synthetic__20260505T075657__cases.csv  synthetic__20260505T075657__summary.json  synthetic__20260505T075753__cases.csv  synthetic__20260505T075753__summary.json  synthetic__20260505T090743__cases.csv  synthetic__20260505T090743__summary.json  synthetic__20260505T090832__cases.csv  synthetic__20260505T090832__summary.json  synthetic__20260505T091021__cases.csv  synthetic__20260505T091021__summary.json
benchmarks/: __init__.py  __main__.py  ablation_report.py  bug_case.py  mock_pipeline.py  result_writer.py  runner.py
docs/: OLLAMA_SETUP.md
scripts/: __init__.py  prepare_datasets.py  setup_bugsinpy.ps1  (+1 more)
(+45 files in other folders)
